# sscomp

./: .gitignore  Makefile  README.md  pyproject.toml
sscomp/: main.py
